v22
- Ability to add (basic)
- Show tags in task details
- Can comment by pressing enter
- Full names for comments and stories
- Support for due time