@@ -5,7 +5,7 @@
 	<span class="task-text"><span class="assignee" title="{{ item.assignee.name }}">{{ item.assignee.name | initials }}</span>&nbsp; <span title="{{item.name}}">{{item.name}}</span>&nbsp;</span>
 
 	<small ng-show="item.due_on" ng-class="{ 'deadline': hasDeadlinePassed(item.due_on, item.due_at), 'upcoming': isDeadlineUpcoming(item.due_on, item.due_at) }">
-		<span ng-if="item.due_at">{{item.due_at | date:'dd MMM h:m a'}}</span>
+		<span ng-if="item.due_at">{{item.due_at | date:'dd MMM h:mm a'}}</span>
 		<span ng-if="!item.due_at">{{item.due_on | date:'dd MMM'}}</span>
 	</small>
 
